fix layout jump

--- a/packages/components-web/src/assets/style/style-guide.less
+++ b/packages/components-web/src/assets/style/style-guide.less
@@ -19,7 +19,7 @@ html {
 body {
   display: grid;
   grid-gap: @space-2;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto 1fr;
   grid-template-areas:
     "nav header"
     "nav main";
